--- a/.github/workflows/apply.yml
+++ b/.github/workflows/apply.yml
@@ -6,7 +6,22 @@ jobs:
     steps:
       - name: checkout repo
         uses: actions/checkout@v4
-      - name: List files in repo
-        run:  |
-          ls ${{ github.workspace }}     
+      - name: Terraform init
+        run:  |    
           terrafrom init -backend-config=env-dev/state.tfvars
+  Terraform-plan:
+    runs-on: self-hosted
+    steps:
+      - name: checkout repo
+        uses: actions/checkout@v4
+      - name: Terraform plan
+        run: |
+          terraform plan -var-file=env-dev/main.tfvars
+  Terraform-apply:
+    runs-on: self-hosted
+    steps:
+      - name: checkout repo
+        uses: actions/checkout@v4
+      - name:   Terraform apply
+        run: |
+          terraform apply -var-file=env-dev/main.tfvars
