--- a/.github/workflows/apply.yml
+++ b/.github/workflows/apply.yml
@@ -8,7 +8,7 @@ jobs:
         uses: actions/checkout@v4
       - name: Terraform init
         run:  |    
-          terrafrom init -backend-config=env-dev/state.tfvars
+          terraform init -backend-config=env-dev/state.tfvars
 #   Terraform-plan:
 #     runs-on: self-hosted
 #     steps:
