--- a/.github/workflows/apply.yml
+++ b/.github/workflows/apply.yml
@@ -1,14 +1,14 @@
 name: Terraform apply
 on: [workflow_dispatch]
 jobs:
-  Terraform-init:
-    runs-on: [self-hosted]
-    steps:
-      - name: checkout repo
-        uses: actions/checkout@v4
-      - name: Terraform init
-        run:  |    
-          terraform init -backend-config=env-dev/state.tfvars
+  # Terraform-init:
+  #   runs-on: [self-hosted]
+  #   steps:
+  #     - name: checkout repo
+  #       uses: actions/checkout@v4
+  #     - name: Terraform init
+  #       run:  |    
+  #         terraform init -backend-config=env-dev/state.tfvars
 #   Terraform-plan:
 #     runs-on: self-hosted
 #     steps:
