--- a/.github/workflows/apply.yml
+++ b/.github/workflows/apply.yml
@@ -25,4 +25,4 @@ jobs:
         uses: actions/checkout@v4
       - name:   Terraform apply
         run: |
-          terraform apply -var-file=env-dev/main.tfvars
+          terraform apply -var-file=env-dev/main.tfvars -var vault_token=${vault_token} -auto-approve
