--- a/.github/workflows/apply.yml
+++ b/.github/workflows/apply.yml
@@ -26,4 +26,4 @@ jobs:
       - name:   Terraform apply
         run: |
           terraform init -backend-config=env-dev/state.tfvars
-          terraform apply -var-file=env-dev/main.tfvars -var vault_token=${vault_token} -auto-approve
+          terraform apply -var-file=env-dev/main.tfvars 
