--- a/.github/workflows/apply.yml
+++ b/.github/workflows/apply.yml
@@ -25,5 +25,7 @@ jobs:
         uses: actions/checkout@v4
       - name:   Terraform apply
         run: |
+          env:
+            vault_token: ${{ secrets.vault_token }}
           terraform init -backend-config=env-dev/state.tfvars
-          terraform apply -var-file=env-dev/main.tfvars 
+          terraform apply -var-file=env-dev/main.tfvars -var vault_token=${vault_token} -auto-approve
