--- a/.github/workflows/apply.yml
+++ b/.github/workflows/apply.yml
@@ -10,14 +10,14 @@ jobs:
   #       run:  |    
   #         terraform init -reconfigure -backend-config=env-dev/state.tfvars
   #         # terraform init -backend-config=env-dev/state.tfvars
-#   Terraform-plan:
-#     runs-on: self-hosted
-#     steps:
-#       - name: checkout repo
-#         uses: actions/checkout@v4
-#       - name: Terraform plan
-#         run: |
-#           terraform plan -var-file=env-dev/main.tfvars
+  Terraform-plan:
+    runs-on: self-hosted
+    steps:
+      - name: checkout repo
+        uses: actions/checkout@v4
+      - name: Terraform plan
+        run: |
+          terraform plan -var-file=env-dev/main.tfvars 2>&1 | tail -n6 | head -n1 >$GITHUB_STEP_SUMMARY
   Terraform-apply:
     runs-on: self-hosted
     steps:
@@ -30,3 +30,16 @@ jobs:
           terraform apply -var-file=env-dev/main.tfvars -var vault_token=${vault_token} -auto-approve
         env:
           vault_token: ${{ secrets.vault_token }}
+
+  Helm-install-application: 
+    runs-on: self-hosted
+    steps:
+      - name: checkout repo
+        uses: actions/checkout@v4
+        with:
+          repository: Thippareddykishor/roboshop-helm
+          path: helm
+      - name: terraform apply
+        run:  |
+          cd helm
+          make dev
