--- a/.github/workflows/apply.yml
+++ b/.github/workflows/apply.yml
@@ -42,6 +42,9 @@ jobs:
           path: helm
       - name: terraform apply
         run:  |
-          cd helm
-          aws eks update-kubeconfig  --name dev
-          make dev
+          # cd helm
+          # aws eks update-kubeconfig  --name dev
+          # make dev
+          gh workflow ls
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
