--- a/.github/workflows/apply.yml
+++ b/.github/workflows/apply.yml
@@ -33,7 +33,7 @@ jobs:
 
   Helm-install-application: 
     # needs: Terraform-apply
-    runs-on: self-hosted
+    runs-on: ubuntu-latest
     steps:
       - name: checkout repo
         uses: actions/checkout@v4
