--- a/.github/workflows/apply.yml
+++ b/.github/workflows/apply.yml
@@ -38,13 +38,14 @@ jobs:
       - name: checkout repo
         uses: actions/checkout@v4
         with:
-          repository: Thippareddykishor/roboshop-helm
-          path: helm
+          repository: Thippareddykishor/roboshop-cart
+          # path: helm
       - name: terraform apply
         run:  |
           # cd helm
           # aws eks update-kubeconfig  --name dev
           # make dev
           gh workflow ls
+          gh workflow run ci-main.yml
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
