--- a/.github/workflows/apply.yml
+++ b/.github/workflows/apply.yml
@@ -18,35 +18,35 @@ jobs:
   #     - name: Terraform plan
   #       run: |
   #         terraform plan -var-file=env-dev/main.tfvars 2>&1 | tail -n6 | head -n1 >$GITHUB_STEP_SUMMARY
-  # Terraform-apply:
-  #   runs-on: self-hosted
-  #   steps:
-  #     - name: checkout repo
-  #       uses: actions/checkout@v4
-  #     - name:   Terraform apply
-  #       run: |
-        
-  #         terraform init -backend-config=env-dev/state.tfvars
-  #         terraform apply -var-file=env-dev/main.tfvars -var vault_token=${vault_token} -auto-approve
-  #       env:
-  #         vault_token: ${{ secrets.vault_token }}
-
-  Helm-install-application: 
-    # needs: Terraform-apply
-    runs-on: ubuntu-latest
+  Terraform-apply:
+    runs-on: self-hosted
     steps:
       - name: checkout repo
         uses: actions/checkout@v4
-        with:
-          repository: Thippareddykishor/roboshop-cart
-          # path: helm
-      - name: terraform apply
-        run:  |
-          git log --format ="%H" -n 1
-          # cd helm
-          # aws eks update-kubeconfig  --name dev
-          # make dev
-          # gh workflow ls
-          # gh workflow run ci-main.yml
+      - name:   Terraform apply
+        run: |
+        
+          terraform init -backend-config=env-dev/state.tfvars
+          terraform apply -var-file=env-dev/main.tfvars -var vault_token=${vault_token} -auto-approve
         env:
-          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          vault_token: ${{ secrets.vault_token }}
+
+  # Helm-install-application: 
+  #   # needs: Terraform-apply
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - name: checkout repo
+  #       uses: actions/checkout@v4
+  #       with:
+  #         repository: Thippareddykishor/roboshop-cart
+  #         # path: helm
+  #     - name: terraform apply
+  #       run:  |
+  #         git log --format ="%H" -n 1
+  #         # cd helm
+  #         # aws eks update-kubeconfig  --name dev
+  #         # make dev
+  #         # gh workflow ls
+  #         # gh workflow run ci-main.yml
+  #       env:
+  #         GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
