--- a/.github/workflows/apply.yml
+++ b/.github/workflows/apply.yml
@@ -10,30 +10,30 @@ jobs:
   #       run:  |    
   #         terraform init -reconfigure -backend-config=env-dev/state.tfvars
   #         # terraform init -backend-config=env-dev/state.tfvars
-  Terraform-plan:
-    runs-on: self-hosted
-    steps:
-      - name: checkout repo
-        uses: actions/checkout@v4
-      - name: Terraform plan
-        run: |
-          terraform plan -var-file=env-dev/main.tfvars 2>&1 | tail -n6 | head -n1 >$GITHUB_STEP_SUMMARY
-  Terraform-apply:
-    runs-on: self-hosted
-    steps:
-      - name: checkout repo
-        uses: actions/checkout@v4
-      - name:   Terraform apply
-        run: |
+  # Terraform-plan:
+  #   runs-on: self-hosted
+  #   steps:
+  #     - name: checkout repo
+  #       uses: actions/checkout@v4
+  #     - name: Terraform plan
+  #       run: |
+  #         terraform plan -var-file=env-dev/main.tfvars 2>&1 | tail -n6 | head -n1 >$GITHUB_STEP_SUMMARY
+  # Terraform-apply:
+  #   runs-on: self-hosted
+  #   steps:
+  #     - name: checkout repo
+  #       uses: actions/checkout@v4
+  #     - name:   Terraform apply
+  #       run: |
         
-          terraform init -upgrade -backend-config=env-dev/state.tfvars
-          terraform apply -var-file=env-dev/main.tfvars -var vault_token=${vault_token} -auto-approve
-        env:
-          vault_token: ${{ secrets.vault_token }}
+  #         terraform init -upgrade -backend-config=env-dev/state.tfvars
+  #         terraform apply -var-file=env-dev/main.tfvars -var vault_token=${vault_token} -auto-approve
+  #       env:
+  #         vault_token: ${{ secrets.vault_token }}
 
   Deploy-cart:
     runs-on: self-hosted
-    needs: Terraform-apply
+    # needs: Terraform-apply
     steps:
       - name:  checkout repo 
         uses:  actions/checkout@v4
@@ -53,7 +53,7 @@ jobs:
           bash argocd.sh cart dev $GID
   
   Deploy-Catalogue:
-    needs: Terraform-apply
+    # needs: Terraform-apply
     runs-on: self-hosted
     steps:
       - name: checkout repo code
@@ -74,7 +74,7 @@ jobs:
           bash argocd sh catalogue dev $GID
   
   Deploy-User:
-    needs: Terraform-apply
+    # needs: Terraform-apply
     runs-on: self-hosted
     steps:
       - name: checkout code
@@ -95,7 +95,7 @@ jobs:
             bash argocd.sh user dev $GID
   
   Deploy-Shipping:
-    needs: Terraform-apply
+    # needs: Terraform-apply
     runs-on: self-hosted
     steps:
       - name: checkout repo code
@@ -117,7 +117,7 @@ jobs:
 
   
   Deploy-Payment:
-    needs: Terraform-apply
+    # needs: Terraform-apply
     runs-on: self-hosted
     steps:
       - name: checkout repo code
@@ -138,7 +138,7 @@ jobs:
           bash argocd.sh payment dev $GID
 
   Deploy-Frontend:
-    needs: Terraform-apply
+    # needs: Terraform-apply
     runs-on: self-hosted
     steps:
       - name: checkout repo
