--- a/.github/workflows/apply.yml
+++ b/.github/workflows/apply.yml
@@ -47,6 +47,7 @@ jobs:
           path: helm
       - name: install Helm
         run: |
+          aws eks update-kubeconfig --name dev
           cd app
           GID=$(git log --format="%H" -n 1)
           cd ../helm
@@ -68,6 +69,7 @@ jobs:
           path: helm
       - name: install Helm
         run: |
+          aws eks update-kubeconfig --name dev
           cd app
           GID=$(git log --format="%H" -n 1)
           cd ../helm
@@ -89,6 +91,7 @@ jobs:
           path: helm
       - name: install helm
         run: |
+            aws eks update-kubeconfig --name dev
             cd app
             GID=$(git log --format="%H" -n 1)
             cd ../helm
@@ -110,6 +113,7 @@ jobs:
           path: helm
       - name: install Helm
         run: |
+          aws eks update-kubeconfig --name dev
           cd app
           GID=$(git log --format="%H" -n 1)
           cd ../helm
@@ -132,6 +136,7 @@ jobs:
           path: helm
       - name: helm install
         run: |
+          aws eks update-kubeconfig --name dev
           cd app
           GID=$(git log --format="%H" -n 1)
           cd ../helm
@@ -153,6 +158,7 @@ jobs:
           path: helm
       - name: install Helm
         run: |
+          aws eks update-kubeconfig --name dev
           cd app
           GID=$(git log --format="%H" -n 1)
           cd ../helm
