--- a/.github/workflows/apply.yml
+++ b/.github/workflows/apply.yml
@@ -47,7 +47,7 @@ jobs:
           path: helm
       - name: install Helm
         run: |
-          aws eks update-kubeconfig --name dev
+          # aws eks update-kubeconfig --name dev
           cd app
           GID=$(git log --format="%H" -n 1)
           cd ../helm
@@ -69,7 +69,7 @@ jobs:
           path: helm
       - name: install Helm
         run: |
-          aws eks update-kubeconfig --name dev
+          # aws eks update-kubeconfig --name dev
           cd app
           GID=$(git log --format="%H" -n 1)
           cd ../helm
@@ -91,7 +91,7 @@ jobs:
           path: helm
       - name: install helm
         run: |
-            aws eks update-kubeconfig --name dev
+            # aws eks update-kubeconfig --name dev
             cd app
             GID=$(git log --format="%H" -n 1)
             cd ../helm
@@ -113,7 +113,7 @@ jobs:
           path: helm
       - name: install Helm
         run: |
-          aws eks update-kubeconfig --name dev
+          # aws eks update-kubeconfig --name dev
           cd app
           GID=$(git log --format="%H" -n 1)
           cd ../helm
@@ -136,7 +136,7 @@ jobs:
           path: helm
       - name: helm install
         run: |
-          aws eks update-kubeconfig --name dev
+          # aws eks update-kubeconfig --name dev
           cd app
           GID=$(git log --format="%H" -n 1)
           cd ../helm
@@ -158,7 +158,7 @@ jobs:
           path: helm
       - name: install Helm
         run: |
-          aws eks update-kubeconfig --name dev
+          # aws eks update-kubeconfig --name dev
           cd app
           GID=$(git log --format="%H" -n 1)
           cd ../helm
