--- a/modules/eks/helm-config/ingress.yml
+++ b/modules/eks/helm-config/ingress.yml
@@ -3,5 +3,7 @@ controller:
     ports:
       http: 80
     annotation:
-      service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
+      service.kubernetes.io/aws-load-balancer-type: "nlb"
       service.beta.kubernetes.io/aws-load-balancer-cross-zone-load-balancing-enabled: "true"
+      # service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
+      # service.beta.kubernetes.io/aws-load-balancer-cross-zone-load-balancing-enabled: "true"
