--- a/modules/eks/helm-config/cluster-issue.yml
+++ b/modules/eks/helm-config/cluster-issue.yml
@@ -1,13 +1,13 @@
 apiVersion: cert-manager.io/v1
 kind: ClusterIssuer
 metadata:
-  name: letsencrpt
+  name: letsencrypt
 spec:
   acme:
     email: kishorebsc12@gmail.com
     server: https://acme-v02.api.letsencrpt.org/directory
     privateKeySecretRef:
-      name: letsencrpt
+      name: letsencrypt
     solvers:
     - http01:
         ingress:
