--- a/modules/eks/helm-config/cluster-issue.yml
+++ b/modules/eks/helm-config/cluster-issue.yml
@@ -1,13 +1,28 @@
+# apiVersion: cert-manager.io/v1
+# kind: ClusterIssuer
+# metadata:
+#   name: letsencrypt  
+# spec:
+#   acme:
+#     email: kishorebsc12@gmail.com
+#     server: https://acme-v02.api.letsencrpt.org/directory
+#     privateKeySecretRef:
+#       name: letsencrypt
+#     solvers:
+#     - http01:
+#         ingress:
+#           class: nginx
+
 apiVersion: cert-manager.io/v1
 kind: ClusterIssuer
 metadata:
-  name: letsencrypt
+  name: letsencrypt  # ✅ Corrected name
 spec:
   acme:
-    email: kishorebsc12@gmail.com
-    server: https://acme-v02.api.letsencrpt.org/directory
+    email: ykishorebsc12@gmail.com
+    server: https://acme-v02.api.letsencrypt.org/directory
     privateKeySecretRef:
-      name: letsencrypt
+      name: letsencrypt-account-key
     solvers:
     - http01:
         ingress:
