--- a/modules/eks/helm-config/cluster-issue.yml
+++ b/modules/eks/helm-config/cluster-issue.yml
@@ -22,7 +22,7 @@ spec:
     email: ykishorebsc12@gmail.com
     server: https://acme-v02.api.letsencrypt.org/directory
     privateKeySecretRef:
-      name: letsencrypt-account-key
+      name: letsencrypt
     solvers:
     - http01:
         ingress:
