--- a/modules/eks/helm-config/cluster-issue.yml
+++ b/modules/eks/helm-config/cluster-issue.yml
@@ -16,10 +16,10 @@
 apiVersion: cert-manager.io/v1
 kind: ClusterIssuer
 metadata:
-  name: letsencrypt  # ✅ Corrected name
+  name: letsencrypt  
 spec:
   acme:
-    email: ykishorebsc12@gmail.com
+    email: kishorebsc12@gmail.com
     server: https://acme-v02.api.letsencrypt.org/directory
     privateKeySecretRef:
       name: letsencrypt
