--- a/modules/eks/helm-config/ingress.yml
+++ b/modules/eks/helm-config/ingress.yml
@@ -1,8 +1,6 @@
 controller:
   service:
-    ports:
-      http: 80
-    annotation:
+    annotations:
       service.kubernetes.io/aws-load-balancer-type: "nlb"
       service.kubernetes.io/aws-load-balancer-cross-zone-load-balancing-enabled: "true"
       # service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
