--- a/modules/eks/helm-config/ingress.yml
+++ b/modules/eks/helm-config/ingress.yml
@@ -1,7 +1,13 @@
+# controller:
+#   service:
+#     annotations:
+#       service.kubernetes.io/aws-load-balancer-type: "nlb"
+#       service.kubernetes.io/aws-load-balancer-cross-zone-load-balancing-enabled: "true"
+      # service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
+      # service.beta.kubernetes.io/aws-load-balancer-cross-zone-load-balancing-enabled: "true"
+
 controller:
   service:
     annotations:
-      service.kubernetes.io/aws-load-balancer-type: "nlb"
-      service.kubernetes.io/aws-load-balancer-cross-zone-load-balancing-enabled: "true"
-      # service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
-      # service.beta.kubernetes.io/aws-load-balancer-cross-zone-load-balancing-enabled: "true"
+      service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
+      service.beta.kubernetes.io/aws-load-balancer-cross-zone-load-balancing-enabled: "true"
