--- a/modules/eks/helm-config/prom-stack-dev.yml
+++ b/modules/eks/helm-config/prom-stack-dev.yml
@@ -7,7 +7,20 @@ grafana:
     hosts:
       - grafana-dev.kommanuthala.store
     path: /
-    tls: []
+    tls:
     - secretName: grafana-general-tls
       hosts:
       - grafana-dev.kommanuthala.store
+  
+  prometheus:
+    ingress:
+      enabled: true
+      ingressClassName: nginx
+      annotations:
+        cert-manager.io/cluster-issuer: letsencrypt
+      hosts: 
+        - prometheus.dev.kommanuthala.store
+      tls:
+      - secretName: prometheus-general-tls
+        
+
