--- a/modules/eks/helm-config/prom-stack-dev.yml
+++ b/modules/eks/helm-config/prom-stack-dev.yml
@@ -26,10 +26,10 @@ prometheus:
         - prometheus.dev.kommanuthala.store
   prometheusSpec:
     additionalScrapeConfigs: 
+    # - job_name: 'ec2-nodes'
+    #   kubernetes_sd_configs:
+    #     - role: node
     - job_name: 'ec2-nodes'
-      kubernetes_sd_configs:
-        - role: node
-    - job_name: 'ec2-nodes1'
       ec2_sd_configs:
         - region: us-east-1
           port: 9100
