--- a/modules/eks/helm-config/prom-stack-dev.yml
+++ b/modules/eks/helm-config/prom-stack-dev.yml
@@ -30,6 +30,11 @@ prometheus:
     #   kubernetes_sd_configs:
     #     - role: node
     - job_name: 'ec2-nodes'
+      relabel_configs:
+      - source_lables: [_meta_ec2_instance_id]
+        target_lables: instance_id
+      - source_lables: [_meta_ec2_tag_Name]
+        target_lables: name
       ec2_sd_configs:
         - region: us-east-1
           port: 9100
