--- a/modules/eks/helm-config/prom-stack-dev.yml
+++ b/modules/eks/helm-config/prom-stack-dev.yml
@@ -41,3 +41,6 @@ prometheus:
           filters:
             - name: "tag:monitor"
               values: ["true"]
+    - job_name: 'ingress'
+      static_configs:
+        - targets: ["ingress-nginx-controller-metric:10254"]
