--- a/modules/eks/helm-config/filebeat.yml
+++ b/modules/eks/helm-config/filebeat.yml
@@ -1,18 +1,82 @@
+# ---
+# daemonset:
+#   extraEnvs: []
+#   secretMounts: []
+#   filebeatConfig:
+#     filebeat.yml: |
+#       filebeat.inputs:
+#       - type: container
+#         paths:
+#           - /var/log/containers/*.*
+#         processors:
+#         - add_kubernetes_metadata:
+#             host: ${NODE_NAME}
+#             matchers:
+#             - logs_path:
+#                 logs_path: "/var/log/containers/"
+#       output.logstash:
+#         hosts: 'elastic-stack-internal1.kommanuthala.store:5044'
+
 ---
 daemonset:
+  # Annotations to apply to the daemonset
+  annotations: {}
+  # additionals labels
+  labels: {}
+  affinity: {}
+  # Include the daemonset
+  enabled: true
+  # Extra environment variables for Filebeat container.
+  envFrom: []
+  # - configMapRef:
+  #     name: config-secret
   extraEnvs: []
-  secretMounts: []
+  #  - name: MY_ENVIRONMENT_VAR
+  #    value: the_value_goes_here
+  extraVolumes: []
+  # - name: extras
+  #   emptyDir: {}
+  extraVolumeMounts: []
+    # - name: extras
+  #   mountPath: /usr/share/extras
+  #   readOnly: true
+  hostNetworking: false
+  # Allows you to add any config files in /usr/share/filebeat
+  # such as filebeat.yml for daemonset
   filebeatConfig:
     filebeat.yml: |
       filebeat.inputs:
       - type: container
         paths:
-          - /var/log/containers/*.*
+          - /var/log/containers/*roboshop-shipping*.log  # Replace with your specific container's log path
+        processors:
+        - add_kubernetes_metadata:
+            host: ${NODE_NAME}
+            matchers:
+              - logs_path:
+                  logs_path: "/var/log/containers/"
+        - drop_event:
+            when:
+              not:
+                equals:
+                  kubernetes.labels.component: "shipping"
+        multiline.type: pattern
+        multiline.pattern: "^[0-9][0-9][0-9][0-9]"
+        multiline.negate: true
+        multiline.match: after
+      - type: container
+        paths:
+          - /var/log/containers/*.log
         processors:
         - add_kubernetes_metadata:
             host: ${NODE_NAME}
             matchers:
             - logs_path:
                 logs_path: "/var/log/containers/"
+        - drop_event:
+            when:
+              or:
+                - equals:
+                    kubernetes.labels.component: "shipping"
       output.logstash:
         hosts: 'elastic-stack-internal1.kommanuthala.store:5044'
