--- a/modules/eks/helm-config/prom-stack-dev.yml
+++ b/modules/eks/helm-config/prom-stack-dev.yml
@@ -1,16 +1,16 @@
-grafana:
-  ingress:
-    enabled: true
-    ingressClassName: nginx
-    annotations:  
-      cert-manager.io/cluster-issuer: letsencrypt
-    hosts:
-      - grafana-dev.kommanuthala.store
-    path: /
-    tls:
-    - secretName: grafana-general-tls
-      hosts:
-      - grafana-dev.kommanuthala.store
+# grafana:
+#   ingress:
+#     enabled: true
+#     ingressClassName: nginx
+#     annotations:  
+#       cert-manager.io/cluster-issuer: letsencrypt
+#     hosts:
+#       - grafana-dev.kommanuthala.store
+#     path: /
+#     tls:
+#     - secretName: grafana-general-tls
+#       hosts:
+#       - grafana-dev.kommanuthala.store
   
 prometheus:
   ingress:
@@ -44,3 +44,17 @@ prometheus:
     - job_name: 'ingress'
       static_configs:
         - targets: ["ingress-nginx-controller-metrics:10254"]
+
+alertmanager:
+  ingress:
+    enabled: true
+    ingressClassName: nginx
+    annotations:
+      cert-manager.io/cluster-issuer: letsencrypt
+    hosts:
+      - alertmanager-dev.kommanuthala.storey
+    path: /
+    tls:
+    - secretName: alertmanager-general-tls
+      hosts:
+       - alertmanager-dev.kommanuthala.store 
